Atualização html e css

--- a/telas/cliente-editar-perfil/menu-perfil.html
+++ b/telas/cliente-editar-perfil/menu-perfil.html
@@ -44,61 +44,72 @@
                     </nav>
                 </div>
                 <div class="painel">
-                    <button class="botao-ciano-pequeno botao-geral-ciano">Voltar</button>
-                    <div>
+                    <div class="painel-1">
+                        <button class="botao-ciano-pequeno botao-geral-ciano">Voltar</button>
+                    </div>                  
+                    <div class="container-funcionalidades painel-2">
+                        <div class="centralizar-perfil">                       
+                            <div class="card-perfil" id="card-perfil-custom">
+                                <svg class="icone-tamanho-gg icone-usuario icone-borda-preta" id="icone-perfil-grande" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round"></path>
+                                </svg>
+                            </div>
+                            <p>Nome do usuário</p>
+                        </div>
+                        <div class="painel-editar-perfil">
+                            <div class="acoes-editar-perfil">
+                                <div class="centralizar">
+                                    <ul class="espacamento-itens">
+                                        <li class="item">
+                                            <div class="icone">   
+                                                <svg class="icone-tamanho-m icone-editar icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path stroke-linecap="round" stroke-linejoin="round"></path>
+                                                </svg>
+                                            </div>    
+                                            <a href="">Editar Perfil</a>
+                                            <div class="icone-seta">                                           
+                                                <svg class="icone-tamanho-m icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path stroke-linecap="round" stroke-linejoin="round"></path>
+                                                </svg>
+                                            </div>    
+                                        </li>
 
-                    </div>
-                    <div class="painel-editar-perfil">
-                        <div class="acoes-editar-perfil">
-                            <div class="centralizar">
-                                <ul class="espacamento-itens">
-                                    <li class="item">
-                                        <div class="icone">   
-                                            <svg class="icone-tamanho-m icone-editar icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path stroke-linecap="round" stroke-linejoin="round"></path>
-                                            </svg>
-                                        </div>    
-                                        <a href="">Editar Perfil</a>
-                                        <div class="icone-seta">                                           
-                                            <svg class="icone-tamanho-m icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path stroke-linecap="round" stroke-linejoin="round"></path>
-                                            </svg>
-                                        </div>    
-                                    </li>
+                                        <li class="item">
+                                            <div class="icone">                                           
+                                                <svg class="icone-tamanho-m icone-documento icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path stroke-linecap="round" stroke-linejoin="round"></path>
+                                                </svg>
+                                            </div>    
+                                            <a href="">Alterar Dados</a>
+                                            <div class="icone-seta1">                                           
+                                                <svg class="icone-tamanho-m icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path stroke-linecap="round" stroke-linejoin="round"></path>
+                                                </svg>
+                                            </div>  
+                                        </li>
 
-                                    <li class="item">
-                                        <div class="icone">                                           
-                                            <svg class="icone-tamanho-m icone-documento icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path stroke-linecap="round" stroke-linejoin="round"></path>
-                                            </svg>
-                                        </div>    
-                                        <a href="">Alterar Dados</a>
-                                        <div class="icone-seta1">                                           
-                                            <svg class="icone-tamanho-m icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path stroke-linecap="round" stroke-linejoin="round"></path>
-                                            </svg>
-                                        </div>  
-                                    </li>
-
-                                    <li class="item">
-                                        <div class="icone">                                                                                  
-                                            <svg class="icone-tamanho-m icone-telefone icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path stroke-linecap="round" stroke-linejoin="round"></path>
-                                            </svg>
-                                        </div>    
-                                            <a href="">Ajuda e Suporte</a>
-                                        <div class="icone-seta2">                                           
-                                            <svg class="icone-tamanho-m icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path stroke-linecap="round" stroke-linejoin="round"></path>
-                                            </svg>
-                                        </div>  
-                                    </li>
-                                    <li class="centralizar-sair">
-                                        <a href="">Sair da conta</a>
-                                    </li>
-                                </ul>
+                                        <li class="item">
+                                            <div class="icone">                                                                                  
+                                                <svg class="icone-tamanho-m icone-telefone icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path stroke-linecap="round" stroke-linejoin="round"></path>
+                                                </svg>
+                                            </div>    
+                                                <a href="">Ajuda e Suporte</a>
+                                            <div class="icone-seta2">                                           
+                                                <svg class="icone-tamanho-m icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path stroke-linecap="round" stroke-linejoin="round"></path>
+                                                </svg>
+                                            </div>  
+                                        </li>
+                                        <li class="centralizar-sair">
+                                            <a href="">Sair da conta</a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="painel-3"> 
                     </div>
                 </div>
             </div>
