Atualização HTML e CSS alterar-dados

--- a/telas/cliente-editar-perfil/alterar-dados-perfil.html
+++ b/telas/cliente-editar-perfil/alterar-dados-perfil.html
@@ -18,9 +18,35 @@
   <title>Insira o nome da tela aqui</title>
 </head>
 <body>
+    <div class="resolucao">
+        <div class="imagem-web">
+            <div class="conteudo">
+                <div class="navbar-desktop-espacamento">
+                    <nav class="navbar-desktop">
+                        <div class="navbar-desktop-imagem">
+                            <img src="../../toaki-componentes-css/image/logo-navbar.png" alt="">
+                        </div>
 
-   
+                        <div class="navbar-desktop-secao-vazia">
+                        </div>
 
-    <script src="./script/script.js"></script>
+                        <div class="navbar-desktop-icones">
+                            
+                            <svg class="icone-tamanho-m icone-sino icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                            <svg class="icone-tamanho-m icone-chat icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                            <svg class="icone-tamanho-m icone-usuario icone-borda-ciano" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </div> 
+    </div>
+	<script src="./script/script.js"></script>
 </body>
 </html>
