feat: ajustes conteiners e item

--- a/telas/vendedor-produtos/vendedor-produtos-desktop.html
+++ b/telas/vendedor-produtos/vendedor-produtos-desktop.html
@@ -66,7 +66,7 @@
               <h1>Meus Produtos</h1>
 
               <div class="pesquisa-acoes">
-                
+
                 <div class="entrada-container-filtro">
                   <input type="text" placeholder="Buscar" class="texto-entrada-absoluto">
                   <svg class="icone-tamanho-m icone-lupa icone-borda-preta entrada-icone-absoluto" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -75,14 +75,37 @@
                 </div>
               </div>
               <div class="container-produtos">  
-                <div class="item">teste</div>
-                <div class="item">teste</div>
-                <div class="item">tete</div>
+                <div class="item">
+                  <div class="image"></div>
+                  <h2 class="nome-produto">Coca-Cola (350ml)</h2>
+                  <div class="diponibilidade-row">
+                    <div class="disponivel">
+                      <span class="disponibilidade-text">Disponivel:</span>
+                      <input type="number" value="23" class="quantity-input" readonly>
+                      <div class="switch-externo switch-externo-ativo">
+                      <div class="switch-bola"></div>
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="image"></div>
+                </div>
+                <div class="item">
+                  <div class="image"></div>
+                </div>
               </div>
               <div class="container-produtos">  
-                <div class="item">teste</div>
-                <div class="item">teste</div>
-                <div class="item">tete</div>
+                <div class="item">
+                  <div class="image"></div>
+                </div>
+                <div class="item">
+                  <div class="image"></div>
+                </div>
+                <div class="item">
+                  <div class="image"></div>
+                </div>
               </div>
 
               </div>
