feat: ajustes conteiners e item2

--- a/telas/vendedor-produtos/vendedor-produtos-desktop.html
+++ b/telas/vendedor-produtos/vendedor-produtos-desktop.html
@@ -80,8 +80,10 @@
                   <h2 class="nome-produto">Coca-Cola (350ml)</h2>
                   <div class="diponibilidade-row">
                     <div class="disponivel">
-                      <span class="disponibilidade-text">Disponivel:</span>
-                      <input type="number" value="23" class="quantity-input" readonly>
+                      <div>
+                        <span class="disponibilidade-text">Disponivel:</span>
+                        <input type="number" value="23" class="quantity-input" readonly>
+                      </div>
                       <div class="switch-externo switch-externo-ativo">
                       <div class="switch-bola"></div>
                       </div>
@@ -91,20 +93,85 @@
                 </div>
                 <div class="item">
                   <div class="image"></div>
+                  <h2 class="nome-produto">Coca-Cola (350ml)</h2>
+                  <div class="diponibilidade-row">
+                    <div class="disponivel">
+                      <div>
+                        <span class="disponibilidade-text">Disponivel:</span>
+                        <input type="number" value="23" class="quantity-input" readonly>
+                      </div>
+                      <div class="switch-externo switch-externo-ativo">
+                      <div class="switch-bola"></div>
+                      </div>
+
+                    </div>
+                  </div>
                 </div>
                 <div class="item">
                   <div class="image"></div>
+                  <h2 class="nome-produto">Coca-Cola (350ml)</h2>
+                  <div class="diponibilidade-row">
+                    <div class="disponivel">
+                      <div>
+                        <span class="disponibilidade-text">Disponivel:</span>
+                        <input type="number" value="23" class="quantity-input" readonly>
+                      </div>
+                      <div class="switch-externo switch-externo-ativo">
+                      <div class="switch-bola"></div>
+                      </div>
+
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="container-produtos">  
                 <div class="item">
                   <div class="image"></div>
+                  <h2 class="nome-produto">Coca-Cola (350ml)</h2>
+                  <div class="diponibilidade-row">
+                    <div class="disponivel">
+                      <div>
+                        <span class="disponibilidade-text">Disponivel:</span>
+                        <input type="number" value="23" class="quantity-input" readonly>
+                      </div>
+                      <div class="switch-externo switch-externo-ativo">
+                      <div class="switch-bola"></div>
+                      </div>
+
+                    </div>
+                  </div>
                 </div>
                 <div class="item">
                   <div class="image"></div>
+                  <h2 class="nome-produto">Coca-Cola (350ml)</h2>
+                  <div class="diponibilidade-row">
+                    <div class="disponivel">
+                      <div>
+                        <span class="disponibilidade-text">Disponivel:</span>
+                        <input type="number" value="23" class="quantity-input" readonly>
+                      </div>
+                      <div class="switch-externo switch-externo-ativo">
+                      <div class="switch-bola"></div>
+                      </div>
+
+                    </div>
+                  </div>
                 </div>
                 <div class="item">
                   <div class="image"></div>
+                  <h2 class="nome-produto">Coca-Cola (350ml)</h2>
+                  <div class="diponibilidade-row">
+                    <div class="disponivel">
+                      <div>
+                        <span class="disponibilidade-text">Disponivel:</span>
+                        <input type="number" value="23" class="quantity-input" readonly>
+                      </div>
+                      <div class="switch-externo switch-externo-ativo">
+                      <div class="switch-bola"></div>
+                      </div>
+
+                    </div>
+                  </div>
                 </div>
               </div>
 
