feat: ajustes na navbar, finalização da tela de recuperarSenhaCodigo, criação de pasta img para guardar as imagens usadas na tela de login

--- a/telas/vendedor-tela-login/criarContaDesktop.html
+++ b/telas/vendedor-tela-login/criarContaDesktop.html
@@ -154,7 +154,7 @@
     </div>
 
     <div class="rotulo-entrada">
-      <label class="rotulo-desktop" for="senha">Senha</label>
+      <label class="rotulo-desktop" for="senha">Confirmar Senha</label>
       <input class="entrada-desktop" type="password" id="senha" placeholder="Ex: MinhaSenhaForte123!">
     </div>
 
@@ -180,7 +180,7 @@
         <img src="" alt="Login com Facebook">
       </button>
 
-      <button type="button" class="btn-social btn-twitter">
+      <button type="button" class="btn-social btn-X">
         <img src="" alt="Login com X">
       </button>
     </div>
