--- a/telas/vendedor-tela-login/novaSenhaDesktop.html
+++ b/telas/vendedor-tela-login/novaSenhaDesktop.html
@@ -25,6 +25,64 @@
     --font-SemiBold: 600;  
     }
 
+    .navbar-tamanho{
+  width: 1348px;
+}
+
+
+.navbar-mobile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: var(--espacamento-xg);
+  width: 100%;
+  padding-top: var(--espacamento-regular);
+  padding-bottom: var(--espacamento-regular);
+  background-color: var(--cor-fundo-secundaria);
+  box-shadow: var(--sombra-media);
+  border-radius: var(--raio-grande);
+}
+
+.navbar-3-icones {
+  gap: var(--espacamento-ggg);
+}
+
+.navbar-desktop {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: var(--espacamento-m);
+  background-color: var(--cor-fundo-secundaria);
+  box-shadow: var(--sombra-media);
+  border-radius: var(--raio-grande);
+}
+
+.navbar-desktop-imagem {
+  width: 60px;
+  height: 60px;
+}
+
+.navbar-desktop-imagem img {
+  width: 100%;
+  height: 100%;
+}
+
+.navbar-desktop-secao-vazia {
+  flex-grow: 1;
+}
+
+.navbar-desktop-icones {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: var(--espacamento-gg);
+}
+
+.icone-tamanho-g {
+  width: 32px;
+  height: 32px;
+}
+
   .voltarPadding {
     padding: 20px;
   }
