--- a/telas/vendedor-principal/base.html
+++ b/telas/vendedor-principal/base.html
@@ -33,22 +33,79 @@
             <div class="navbar-desktop-secao-vazia">
             </div>
 
-            <div class="navbar-desktop-icones">
-              <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="navbar-desktop-icones">             
+              <svg class="icone-tamanho-g icone-sino icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round"></path>
               </svg>
-              <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+
+              <svg class="icone-tamanho-g icone-chat icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round"></path>
               </svg>
-              <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+
+              <svg class="icone-tamanho-g icone-usuario icone-borda-ciano" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round"></path>
               </svg>
+
             </div>
           </nav>
         </div>
 
         <div class="painel">
           <div class="painel-perfil">
+            <div class="icone-perfil">
+              <svg class="icone-tamanho-gg icone-usuario icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+            </div>
+            <h1>Camarão do João</h1>
+            <h2>João Paulo</h2>
+            <div class="tag-online">
+              <h1>Online</h1>
+            </div>
+            <div class="avaliacoes">
+              <svg class="icone-tamanho-m icone-estrela icone-borda-preta icone-preenchimento-amarelo" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+              <h1>4.8</h1>
+              <h2>(243 avaliacoes)</h2>
+            </div>
+            <div class="linha-reta">
+
+            </div>
+            <div class="horarios">
+              <div class="lugar">
+                <svg class="icone-tamanho-m icone-mapa icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+                <h2>Praia de Boa Viagem</h2>
+              </div>
+              <div class="hora">
+                <svg class="icone-tamanho-m icone-relogio icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+                <h2>08:00 17:00</h2>
+              </div>
+              <div class="linha-reta">
+
+              </div>
+              <h2>Vendas de Hoje</h2>
+              <div class="qtd-produtos">
+                <svg class="icone-tamanho-m icone-bolsa-de-compras icone-borda-ciano" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+                <h1>18</h1>
+                <h1>pedidos</h1>
+              </div>
+              <div class="linha-reta">
+
+              </div>
+              <h2>Categorias</h2>
+              <div class="btn-categorias">
+                <button>Bebidas</button>
+                <button>Caldinhos</button>
+                <button>Churrasco</button>
+              </div>
+            </div>
           </div>
           <div class="painel-acoes">
             <div class="painel-acoes-menu">
