Atualizacão html, css + responsividade

--- a/telas/cliente-editar-perfil/menu-perfil.html
+++ b/telas/cliente-editar-perfil/menu-perfil.html
@@ -55,7 +55,7 @@
                                 </svg>
                             </div>
                             <p>Nome do usuário</p>
-                        </div>
+                        </div>                        
                         <div class="painel-editar-perfil">
                             <div class="acoes-editar-perfil">
                                 <div class="centralizar">
@@ -102,7 +102,7 @@
                                             </div>  
                                         </li>
                                         <li class="centralizar-sair">
-                                            <a href="">Sair da conta</a>
+                                            <a class="botao-sair" href="">Sair da conta</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -115,7 +115,77 @@
             </div>
         </div> 
     </div>
-    
+    <div class="layout-mobile">
+        <div class="inicio">             
+            <div class="espacamento-icone">        
+                <svg class="icone-tamanho-m icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+            </div>
+            <div class="espacamento-texto">
+                <p>Inicio</p>
+            </div>  
+        </div>
+
+            <div class="icone-usuario-texto">
+                <div class="espacamento-icone">                         
+                    <svg class="icone-tamanho-gg icone-usuario icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                </div>
+                <div class="espacamento-texto">
+                    <p>Ola, Nome</p>
+                </div>
+            </div> 
+            <div class="centralizar">
+                <ul class="espacamento-itens">
+                    <li class="item">
+                        <div class="icone">   
+                            <svg class="icone-tamanho-m icone-editar icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                        </div>    
+                        <a href="">Editar Perfil</a>
+                        <div class="icone-seta">                                           
+                            <svg class="icone-tamanho-m icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                        </div>    
+                    </li>
+
+                    <li class="item">
+                        <div class="icone">                                           
+                            <svg class="icone-tamanho-m icone-documento icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                        </div>    
+                        <a href="">Alterar Dados</a>
+                        <div class="icone-seta1">                                           
+                            <svg class="icone-tamanho-m icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                        </div>  
+                    </li>
+
+                    <li class="item">
+                        <div class="icone">                                                                                  
+                            <svg class="icone-tamanho-m icone-telefone icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                        </div>    
+                            <a href="">Ajuda e Suporte</a>
+                        <div class="icone-seta2">                                           
+                            <svg class="icone-tamanho-m icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                        </div>  
+                    </li>
+                    <li class="centralizar-sair">
+                        <a class="botao-sair" href="">Sair da conta</a>
+                    </li>
+                </ul>
+            </div>                                                   
+        </div>
     
 
   <script src="./script/script.js"></script>
