Atualizações HTML e CSS (EDITAR-PERFIL, MENU-PERFIL, ALTERAR-DADOS)

--- a/telas/cliente-editar-perfil/editar-perfil.html
+++ b/telas/cliente-editar-perfil/editar-perfil.html
@@ -70,7 +70,7 @@
                     <div class="painel-forms">
                         <div>
                             <div>
-                                <h2>Alterar Dados</h2>
+                                <h2>Editar perfil</h2>
                             </div>
                             <form action=""></form>
                         </div>
