--- a/telas/cliente-editar-perfil/menu-perfil.html
+++ b/telas/cliente-editar-perfil/menu-perfil.html
@@ -26,10 +26,8 @@
                         <div class="navbar-desktop-imagem">
                             <img src="../../toaki-componentes-css/image/logo-navbar.png" alt="">
                         </div>
-
                         <div class="navbar-desktop-secao-vazia">
                         </div>
-
                         <div class="navbar-desktop-icones">
                             <svg class="icone-tamanho-g icone-sino icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round"></path>
@@ -126,12 +124,13 @@
                 <p>Inicio</p>
             </div>  
         </div>
-
             <div class="icone-usuario-texto">
                 <div class="espacamento-icone">                         
+                    <div class="card-perfil">
                     <svg class="icone-tamanho-gg icone-usuario icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round"></path>
                     </svg>
+                    </div>
                 </div>
                 <div class="espacamento-texto">
                     <p>Ola, Nome</p>
@@ -186,8 +185,6 @@
                 </ul>
             </div>                                                   
         </div>
-    
-
   <script src="./script/script.js"></script>
 </body>
 </html>
