--- a/telas/vendedor-principal/base.html
+++ b/telas/vendedor-principal/base.html
@@ -14,18 +14,20 @@
   <link rel="stylesheet" href="./css/style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Insira o nome da tela aqui</title>
+  <title>Vendedor - Tela Principal</title>
 </head>
 <body>
-
   
   <div class="resolucao">
+
     <div class="imagem-web">
+
       <div class="localizacao-mobile">
         <svg width="15" height="20" viewBox="0 0 15 20" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd" d="M7.45644 19.1191C7.85163 19.1191 14.9129 11.5745 14.9129 7.45644C14.9129 3.33836 11.5745 0 7.45644 0C3.33836 0 0 3.33836 0 7.45644C0 11.5745 7.06126 19.1191 7.45644 19.1191ZM7.45645 11.1859C9.54432 11.1859 11.2369 9.49332 11.2369 7.40545C11.2369 5.31758 9.54432 3.62503 7.45645 3.62503C5.36859 3.62503 3.67604 5.31758 3.67604 7.40545C3.67604 9.49332 5.36859 11.1859 7.45645 11.1859Z" fill="#F58158"/>
         </svg>
       </div>
+
       <div class="conteudo">
         <div>
           <nav class="navbar-desktop">
@@ -36,18 +38,19 @@
             </div>
 
             <div class="navbar-desktop-icones">
-              <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="icone-tamanho-g icone-sino icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round"></path>
               </svg>
-              <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="icone-tamanho-g icone-chat icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round"></path>
               </svg>
-              <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="icone-tamanho-g icone-usuario icone-borda-ciano" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round"></path>
               </svg>
             </div>
           </nav>
         </div>
+        
         <div class="painel">
           <div class="painel-perfil">
             <div class="icone-perfil">
@@ -118,6 +121,7 @@
 
             </div>
           </div>
+        </div>
 
         <div class="painel-mobile">
           <div class="painel-mobile-view">
@@ -188,10 +192,12 @@
             </nav>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
 
+      </div>
+
+    </div>
+
+  </div>
 
   <script src="./js/script.js"></script>
 </body>
